--- a/gameend.html
+++ b/gameend.html
@@ -19,14 +19,21 @@
         <canvas id="result-graph"></canvas>
       </div>
       <p id="percent"></p>
-      <div class="btn result">
-        <a href="./preresult.html" style="color: rgba(0, 0, 0, 0)">transparent</a>
+      <!-- <div class="btn result"> -->
+      <!--   <a href="./preresult.html" style="color: rgba(0, 0, 0, 0)">transparent</a> -->
+      <!-- </div> -->
+      <!-- <div class="btn replay"> -->
+      <!--   <a href="./game.html" style="color: rgba(0, 0, 0, 0)">transparent</a> -->
+      <!-- </div> -->
+      <div class="sec-title-wrapper">
+        <p class="sec-title">生活リズム、指で触れた？</p>
       </div>
-      <div class="btn replay">
-        <a href="./game.html" style="color: rgba(0, 0, 0, 0)">transparent</a>
+      <div class="sec-contain-wrapper">
+        <div id="parent"></div>
       </div>
     </div>
     <script src="js/gameend.js"></script>
     <script src="js/movePieChart.js"></script>
+    <script src="./js/result.js"></script>
   </body>
 </html>
