--- a/result.html
+++ b/result.html
@@ -28,12 +28,12 @@
   </head>
   <body oncontextmenu="return false;" oncopy="return false;">
     <div id="wrapper">
-      <div class="sec-title-wrapper">
-        <p class="sec-title">生活リズム、指で触れた？</p>
-      </div>
-      <div class="sec-contain-wrapper">
-        <div id="parent"></div>
-      </div>
+      <!-- <div class="sec-title-wrapper"> -->
+      <!--   <p class="sec-title">生活リズム、指で触れた？</p> -->
+      <!-- </div> -->
+      <!-- <div class="sec-contain-wrapper"> -->
+      <!--   <div id="parent"></div> -->
+      <!-- </div> -->
 
       <div class="sec-title-wrapper">
         <p class="sec-title">生活リズム、いろいろ</p>
