--- a/index2.html
+++ b/index2.html
@@ -9,13 +9,16 @@
       rel="stylesheet"
     />
   </head>
-  <body oncontextmenu="return false;" oncopy="return false;" <!-- onLoad=setTimeout("location.href='./game.html",3000) -->
-        >
-    <meta http-equiv="refresh" content="6;url='./game.html'">
+  <body oncontextmenu="return false;" oncopy="return false;">
+    <!-- onLoad=setTimeout("location.href='./game.html",3000) -->
+
+    <meta http-equiv="refresh" content="6;url='./game.html'" />
     <div id="wrapper">
       <div class="sec-title-wrapper"><p class="sec-title">操作方法</p></div>
       <div class="sec-contain-wrapper">
-        <p class="fade1">流れてくる絵文字がラインを通過するのと同じタイミングで</p>
+        <p class="fade1">
+          流れてくる絵文字がラインを通過するのと同じタイミングで
+        </p>
         <p class="fade2">キーボードの D・F・J・K をタイプしてください。</p>
       </div>
 
