--- a/gameend.html
+++ b/gameend.html
@@ -10,10 +10,17 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+  </head>
   </head>
   <body oncontextmenu="return false;" oncopy="return false;">
     <div id="wrapper">
-      <p id="your-rate">あなたの達成率は</p>
+      <p id="your-rate">生活リズム、指で触れた？</p>
       <div id="parent"></div>
       <div class="graph-wrapper">
         <canvas id="result-graph"></canvas>
@@ -25,9 +32,9 @@
       <!-- <div class="btn replay"> -->
       <!--   <a href="./game.html" style="color: rgba(0, 0, 0, 0)">transparent</a> -->
       <!-- </div> -->
+      <!--
       <div class="sec-title-wrapper">
-        <p class="sec-title">生活リズム、指で触れた？</p>
-      </div>
+      </div> -->
       <div class="sec-contain-wrapper">
         <div id="parent"></div>
       </div>
